--- a/lang/en.json
+++ b/lang/en.json
@@ -609,6 +609,7 @@
             "show": "Show Videos"
         },
         "add_to_cart": "Add to Cart",
+        "view_more": "View",
         "adding_to_cart": "Adding to cart…",
         "options": "Options",
         "none": "None",
